# vLLM_rust_test

./: .gitignore  Cargo.toml  cisco_test_5090x2.csv  cisco_test_5090x2.json  cisco_test_5090x2_no_cache.csv  cisco_test_5090x2_no_cache.json  cisco_test_5090x2_prefix_cache.csv  cisco_test_5090x2_prefix_cache.json  cisco_test_h200_no_cache.json  cisco_test_h200_prefix_cache.csv  cisco_test_h200x1.csv  cisco_test_h200x1.json  cisco_test_result_llama3.2_3b.csv  cisco_tets_result.csv  t.py  test_prompts.json  test_prompts_50.json  vllm_helper.py
prompt_021/: cisco-sa-20090325-scp-iosxe_021_prompt01.txt  cisco-sa-20090325-scp-iosxe_021_prompt02.txt  cisco-sa-20090325-scp-iosxe_021_prompt03.txt  cisco-sa-20090325-scp-iosxe_021_prompt04.txt  cisco-sa-20090325-scp-iosxe_021_prompt05.txt  cisco-sa-20090325-scp-iosxe_021_prompt06.txt  cisco-sa-20090325-scp-iosxe_021_prompt07.txt  cisco-sa-20090325-scp-iosxe_021_prompt08.txt  cisco-sa-20090325-scp-iosxe_021_prompt09.txt  cisco-sa-20090325-scp-iosxe_021_prompt10.txt
prompt_021_processed/: cisco-sa-20090325-scp-iosxe_021_prompt01.txt  cisco-sa-20090325-scp-iosxe_021_prompt02.txt  cisco-sa-20090325-scp-iosxe_021_prompt03.txt  cisco-sa-20090325-scp-iosxe_021_prompt04.txt  cisco-sa-20090325-scp-iosxe_021_prompt05.txt  cisco-sa-20090325-scp-iosxe_021_prompt06.txt  cisco-sa-20090325-scp-iosxe_021_prompt07.txt  cisco-sa-20090325-scp-iosxe_021_prompt08.txt  cisco-sa-20090325-scp-iosxe_021_prompt09.txt  cisco-sa-20090325-scp-iosxe_021_prompt10.txt  sys_prompt.txt
prompt_files/: cisco-sa-20090325-scp-iosxe_021_prompt.txt  (+98 more)
src/: main.rs  (+1 more)
(+63 files in other folders)
