[package]
name = "rust_vllm_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prompts"
path = "src/bin/main.rs"

[[bin]]
name = "cisco"
path = "src/bin/main_cisco.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
